--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "no-console": "warn",
     "import/first": "error",
     "react/prop-types": "off",
+    "react/jsx-props-no-spreading": "off",
     "react/function-component-definition": [
       2,
       { "namedComponents": "arrow-function" }
