--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.10",
+    "i18next": "^22.4.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "vite-plugin-checker": "^0.5.6"
   },
   "devDependencies": {
